iptables-rules-docker
# Generated by iptables-save v1.4.21 on Mon Jun 27 19:05:44 2016
*nat
:PREROUTING ACCEPT [1:328]
:INPUT ACCEPT [1:328]
:OUTPUT ACCEPT [21:1457]
:POSTROUTING ACCEPT [26:1751]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -d 172.16.28.65/32 -j DNAT --to-destination 172.18.0.2
-A PREROUTING -d 172.16.28.66/32 -j DNAT --to-destination 172.18.0.3
-A PREROUTING -d 172.16.28.67/32 -j DNAT --to-destination 172.18.0.4
-A PREROUTING -d 172.16.28.68/32 -j DNAT --to-destination 172.18.0.5
-A PREROUTING -d 172.16.28.69/32 -j DNAT --to-destination 172.18.0.6
-A PREROUTING -d 172.16.28.70/32 -j DNAT --to-destination 172.18.0.7

-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -j MASQUERADE
-A POSTROUTING -s 172.18.0.3/32 -j MASQUERADE
-A POSTROUTING -s 172.18.0.4/32 -j MASQUERADE
-A POSTROUTING -s 172.18.0.5/32 -j MASQUERADE
-A POSTROUTING -s 172.18.0.6/32 -j MASQUERADE
-A POSTROUTING -s 172.18.0.7/32 -j MASQUERADE
-A POSTROUTING -s 172.18.0.8/32 -j MASQUERADE
-A POSTROUTING -s 172.18.0.9/32 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Mon Jun 27 19:05:44 2016
# Generated by iptables-save v1.4.21 on Mon Jun 27 19:05:44 2016
*filter
:INPUT ACCEPT [1654:351525]
:FORWARD ACCEPT [16:906]
:OUTPUT ACCEPT [1098:283902]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -s 172.17.0.0/16 -d 172.16.28.11 -j DROP
-A INPUT -s 172.17.0.0/16 -d 172.16.28.12 -j DROP
-A INPUT -s 172.18.0.0/16 -d 172.16.28.11 -j DROP
-A INPUT -s 172.18.0.0/16 -d 172.16.28.12 -j DROP
-A FORWARD -s 172.17.0.0/16 -d 172.16.28.0/24 -j DROP
-A FORWARD -s 172.18.0.0/16 -d 172.16.28.0/24 -j DROP
-A FORWARD -p udp ! --dport 53 -s 172.17.0.0/16 -d 172.16.18.0/24 -j DROP
-A FORWARD -p udp ! --dport 53 -s 172.18.0.0/16 -d 172.16.18.0/24 -j DROP
-A FORWARD -p tcp ! --dport 53 -s 172.17.0.0/16 -d 172.16.18.0/24 -j DROP
-A FORWARD -p tcp ! --dport 53 -s 172.18.0.0/16 -d 172.16.18.0/24 -j DROP
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Mon Jun 27 19:05:44 2016
